<resources>
    <string name="app_name">Calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="dot">.</string>
    <string name="some_numbers">Numbers</string>
    <string name="buttonC">C</string>
    <string name="buttonDiv">/</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDelete">Del</string>
    <string name="buttonSubtraction">-</string>
    <string name="buttonAddition">+</string>
    <string name="buttonEqually">=</string>
    <string name="theme_1">Theme 1</string>
    <string name="theme_2">Theme 2</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="Settings">Settings</string>
</resources>