<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_theme"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        style="@style/ButtonStyle">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_2"
        style="@style/ButtonStyle" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>